change pom so tests work